--- a/module-member/src/main/resources/application.yml
+++ b/module-member/src/main/resources/application.yml
@@ -66,5 +66,5 @@ mybatis-plus:
     db-config:
       # 全局表名前缀
       table-prefix: jc_
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #打印sql语句,调试用
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #打印sql语句,调试用
